test/classes/initializers/generics/declarations/concrete-inits-bad.good
concrete-inits-bad.chpl:22: error: unresolved type specifier generated for 'Foo(type imag(64))'
concrete-inits-bad.chpl:9: note: candidates are: Foo(type xVal)
concrete-inits-bad.chpl:15: note:                 Foo(type xVal)
